# langneurons

./: README.md  requirements.txt  run.sh  setup.sh  vercel.json
backend/: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.sh
backend/core/: __init__.py  inspect_agent.py  inspector.py  langtrace.py  swarm.py
backend/core/agents/: agent_node.py  visualizer.py
backend/core/engine/: agent_factory.py  llm_gateway.py  memory.py  orchestrator.py  prompt_builder.py
backend/core/langtrace/: __init__.py  callback.py  cli.py  dashboard.py  pricing.py
backend/core/llm/: __init__.py  base.py  connector.py  registry.py
backend/core/memory/: __init__.py  execution_memory.py  memory.py
backend/core/modules/: activation_router.py  dynamic_org_builder.py  role_manager.py  skill_generator.py  task_decomposer.py
backend/core/runtime/: __init__.py
backend/core/skills/: __init__.py  skill.py  skill_tool.py
backend/core/tools/: __init__.py  (+1 more)
backend/entrypoints/: conversation_window.py  debug_redis.py  inspect_neuron.py  query_naukri_broker.py  run_agent_langneuron.py  run_conversation.py  run_naukri_broker.py  run_neurons.py
backend/tests/: chat_with_neuron.py  check_imports.py  clear_redis.py  context_clean.py  inspect_neuron.py  monitor_conversations.py  rebuild_tree.py  sys  test.py  test_2.py  test_auto_skill.py  test_code_writer.py  test_conversation_persistence.py  test_hierarchical_awareness.py  trigger_agents.py  verify_agent_factory.py  verify_agent_integration.py  verify_agent_memory.py
(+77 files in other folders)
