[project]
name = "langneurons"
version = "0.2.0"
description = "A production-grade, hierarchical multi-agent swarm framework."
authors = [
    { name = "Swapnil Jyot", email = "your.email@example.com" }
]
dependencies = [
    "redis>=4.5.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "langchain>=0.1.0",
    "langgraph>=0.0.1",
    "langchain-core>=0.1.0"
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["AI", "agents", "orchestration", "LLM", "swarm", "langgraph"]

[project.urls]
Homepage = "https://github.com/swapniljyot/langneurons"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["core"]

[tool.setuptools.package-data]
"core" = ["py.typed"]
